--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DQ10 さいほう職人計算ツール (改善版)</title>
+    <title>DQ10 さいほう職人計算ツール (修正版)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>DQ10 さいほう職人計算ツール (改善版)</h1>
+    <h1>DQ10 さいほう職人計算ツール (修正版)</h1>
     <p>原始獣のコート（体上）専用。状態の自動保存＆リセット機能付き。</p>
 
     <div id="setup-area">
